[package]
name = "signer-fil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filecoin transaction signer — secp256k1 ECDSA + Blake2b."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-fil"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
blake2.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-fil = { workspace = true, optional = true }

[dev-dependencies]
k256.workspace = true

[lints]
workspace = true
