[package]
name = "signer-fil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Filecoin transaction signer — secp256k1 ECDSA + Blake2b."
keywords = ["crypto", "signer", "filecoin", "blake2b", "secp256k1"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-fil"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
hex.workspace = true
blake2.workspace = true

kobe-fil = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
signer-primitives = { workspace = true, features = ["testing"] }

[lints]
workspace = true
