[package]
name = "signer-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified signing trait and types for multi-chain transaction signers."
keywords = ["crypto", "signer", "trait", "multi-chain"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["std"]
std = ["alloc", "zeroize?/std"]
alloc = ["zeroize?/alloc"]
getrandom = ["dep:getrandom"]
secp256k1 = ["alloc", "dep:k256", "dep:zeroize"]
schnorr = ["alloc", "dep:k256", "dep:zeroize", "k256/schnorr"]
ed25519 = ["alloc", "dep:ed25519-dalek"]
testing = ["secp256k1", "schnorr"]

[dependencies]
hex.workspace = true
thiserror.workspace = true
k256 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[lints]
workspace = true
