[package]
name = "signer-spark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Spark (Bitcoin L2) transaction signer — secp256k1 ECDSA."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-spark"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
sha2.workspace = true
ripemd.workspace = true
bs58.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-spark = { workspace = true, optional = true }

[dev-dependencies]
k256.workspace = true

[lints]
workspace = true
