[package]
name = "signer-spark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Spark (Bitcoin L2) transaction signer — secp256k1 ECDSA."
keywords = ["crypto", "signer", "spark", "bitcoin-l2", "secp256k1"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std", "bech32/std", "signer-btc/std"]
alloc = ["signer-primitives/alloc", "signer-btc/alloc"]
getrandom = ["signer-primitives/getrandom", "signer-btc/getrandom"]
kobe = ["dep:kobe-spark"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
signer-btc = { workspace = true, default-features = false, features = ["alloc"] }
bech32.workspace = true
hex.workspace = true
ripemd.workspace = true
sha2.workspace = true

kobe-spark = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
signer-primitives = { workspace = true, features = ["testing"] }

[lints]
workspace = true
