[package]
name = "signer-sui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sui transaction signer — Ed25519 + intent-based signing."

[features]
default = ["std"]
std = ["alloc", "signer-core/std", "zeroize/std"]
alloc = ["signer-core/alloc", "zeroize/alloc"]
getrandom = ["rand_core/getrandom"]
kobe = ["dep:kobe-sui"]

[dependencies]
signer-core.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
blake2.workspace = true
hex.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-sui = { workspace = true, optional = true }

[lints]
workspace = true
