[package]
name = "signer-sui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sui transaction signer — Ed25519 + intent-based signing."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-sui"]

[dependencies]
signer-primitives = { workspace = true, features = ["ed25519"] }
ed25519-dalek.workspace = true
blake2.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-sui = { workspace = true, optional = true }

[lints]
workspace = true
