[package]
name = "signer-svm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana transaction signer — Ed25519 signing, compact-u16 tx encoding."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std", "zeroize/std"]
alloc = ["signer-primitives/alloc", "zeroize/alloc"]
getrandom = ["dep:getrandom"]
kobe = ["dep:kobe-svm"]

[dependencies]
signer-primitives.workspace = true
ed25519-dalek.workspace = true
getrandom = { workspace = true, optional = true }
bs58.workspace = true
hex.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-svm = { workspace = true, optional = true }

[lints]
workspace = true
