[package]
name = "signer-svm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana transaction signer — Ed25519 signing, compact-u16 tx encoding."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-svm"]

[dependencies]
signer-primitives = { workspace = true, features = ["ed25519"] }
ed25519-dalek.workspace = true
bs58.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-svm = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true
