[package]
name = "signer-ton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TON transaction signer — Ed25519 signing."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-ton"]

[dependencies]
signer-primitives = { workspace = true, features = ["ed25519"] }
ed25519-dalek.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-ton = { workspace = true, optional = true }

[lints]
workspace = true
