[package]
name = "signer-tron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TRON transaction signer — secp256k1 ECDSA + Keccak-256."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-tron"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
sha2.workspace = true
sha3.workspace = true
bs58.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-tron = { workspace = true, optional = true }

[dev-dependencies]
k256.workspace = true

[lints]
workspace = true
