[package]
name = "signer-xrpl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "XRP Ledger transaction signer — secp256k1 ECDSA + SHA-512-half + DER."
keywords = ["crypto", "signer", "xrpl", "ripple", "secp256k1"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-xrpl"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
hex.workspace = true
sha2.workspace = true
ripemd.workspace = true
bs58.workspace = true

kobe-xrpl = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
signer-primitives = { workspace = true, features = ["testing"] }

[lints]
workspace = true
